hphp/test/zend/good/ext/libxml/tests/libxml_disable_entity_loader.php.skipif
<?php if (!extension_loaded('simplexml') || !extension_loaded('dom') || defined('PHP_WINDOWS_VERSION_MAJOR')) die('skip'); ?>
