hphp/test/zend/bad/ext/libxml/tests/libxml_set_external_entity_loader_basic.php.skipif
<?php if (!extension_loaded('dom')) die('skip'); ?>